--- a/TrackCoach/Base.lproj/Main.storyboard
+++ b/TrackCoach/Base.lproj/Main.storyboard
@@ -170,10 +170,10 @@
             </objects>
             <point key="canvasLocation" x="866" y="414"/>
         </scene>
-        <!--Tutorial1ViewController-->
+        <!--Tutorial1 View Controller-->
         <scene sceneID="SjF-x1-3wT">
             <objects>
-                <viewController storyboardIdentifier="Tutorial1ViewController" title="Tutorial1ViewController" id="srx-0w-jHu" customClass="Tutorial1ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Tutorial1ViewController" id="srx-0w-jHu" customClass="Tutorial1ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5VF-fM-ERs"/>
                         <viewControllerLayoutGuide type="bottom" id="D1r-Oq-O9D"/>
@@ -343,49 +343,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rkb-C6-eLL" userLabel="Title View">
-                                <rect key="frame" x="0.0" y="20" width="600" height="53"/>
-                                <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4w-Uj-PzT">
-                                        <rect key="frame" x="229" y="16" width="143" height="22"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeK-la-zEP">
-                                        <rect key="frame" x="20" y="12" width="40" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="Hl2-LM-yl7"/>
-                                            <constraint firstAttribute="height" constant="30" id="mDV-ct-wpd"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" title="Back">
-                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="back:" destination="1XP-Fe-ht0" eventType="touchUpInside" id="tTD-vd-CjL"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="h4w-Uj-PzT" firstAttribute="centerY" secondItem="zeK-la-zEP" secondAttribute="centerY" id="2jC-Rv-DqH"/>
-                                    <constraint firstAttribute="height" constant="53" id="54t-r4-XFe"/>
-                                    <constraint firstItem="h4w-Uj-PzT" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="top" constant="16" id="DS7-Ko-nqJ"/>
-                                    <constraint firstItem="zeK-la-zEP" firstAttribute="leading" secondItem="Rkb-C6-eLL" secondAttribute="leading" constant="20" id="KNT-9k-qYr"/>
-                                    <constraint firstAttribute="centerY" secondItem="h4w-Uj-PzT" secondAttribute="centerY" id="kJl-Mf-jsT"/>
-                                    <constraint firstAttribute="centerX" secondItem="h4w-Uj-PzT" secondAttribute="centerX" id="lgN-is-uNB"/>
-                                </constraints>
-                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l1k-H9-XFT">
-                                <rect key="frame" x="0.0" y="73" width="600" height="927"/>
+                                <rect key="frame" x="0.0" y="57" width="600" height="943"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFB-D5-Fdg" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PbV-SZ-Ayb">
-                                                <rect key="frame" x="248" y="295" width="104" height="36"/>
+                                                <rect key="frame" x="248" y="305" width="104" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Contact Me">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -395,13 +360,13 @@
                                                 </connections>
                                             </button>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="With TrackCoach, you can simply time races, and easily share them!" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eai-uI-LuV">
-                                                <rect key="frame" x="106" y="22" width="484" height="33"/>
+                                                <rect key="frame" x="106" y="32" width="484" height="33"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-60-vEQ">
-                                                <rect key="frame" x="10" y="76" width="580" height="150"/>
+                                                <rect key="frame" x="10" y="86" width="580" height="150"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="250" constant="150" id="npF-3j-ceA"/>
@@ -429,7 +394,7 @@ More features on the way!
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="4M9-6W-Ot6">
-                                                <rect key="frame" x="10" y="0.0" width="76" height="76"/>
+                                                <rect key="frame" x="10" y="10" width="76" height="76"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="76" id="nCd-xn-5HR"/>
                                                     <constraint firstAttribute="height" constant="76" id="nl7-t8-htU"/>
@@ -448,7 +413,6 @@ More features on the way!
                                             <constraint firstAttribute="width" constant="600" id="Fq1-gl-B1Q"/>
                                             <constraint firstAttribute="centerX" secondItem="PbV-SZ-Ayb" secondAttribute="centerX" id="J2Z-xJ-B3x"/>
                                             <constraint firstItem="vPF-60-vEQ" firstAttribute="top" secondItem="4M9-6W-Ot6" secondAttribute="bottom" priority="250" id="Qzy-wx-ZaR"/>
-                                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" secondItem="hFB-D5-Fdg" secondAttribute="top" id="ZhI-je-rUK"/>
                                             <constraint firstAttribute="bottom" secondItem="hsx-3j-I5c" secondAttribute="bottom" constant="20" id="Zub-k1-6ZU"/>
                                             <constraint firstAttribute="height" priority="250" constant="700" id="cR9-4F-T0l"/>
                                             <constraint firstItem="PbV-SZ-Ayb" firstAttribute="top" secondItem="vPF-60-vEQ" secondAttribute="bottom" constant="69" id="eWv-Lf-rKH"/>
@@ -466,21 +430,53 @@ More features on the way!
                                     <constraint firstAttribute="bottom" secondItem="hFB-D5-Fdg" secondAttribute="bottom" id="Xed-h2-itY"/>
                                 </constraints>
                             </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rkb-C6-eLL" userLabel="Title View">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="57"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4w-Uj-PzT">
+                                        <rect key="frame" x="227" y="25" width="146" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeK-la-zEP">
+                                        <rect key="frame" x="10" y="16" width="30" height="40"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                        <state key="normal" title="&lt;">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="back:" destination="1XP-Fe-ht0" eventType="touchUpInside" id="tTD-vd-CjL"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.47843137250000001" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="h4w-Uj-PzT" firstAttribute="centerY" secondItem="zeK-la-zEP" secondAttribute="centerY" id="2jC-Rv-DqH"/>
+                                    <constraint firstItem="h4w-Uj-PzT" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="top" constant="25" id="DS7-Ko-nqJ"/>
+                                    <constraint firstItem="zeK-la-zEP" firstAttribute="leading" secondItem="Rkb-C6-eLL" secondAttribute="leading" constant="10" id="KNT-9k-qYr"/>
+                                    <constraint firstAttribute="centerX" secondItem="h4w-Uj-PzT" secondAttribute="centerX" id="lgN-is-uNB"/>
+                                    <constraint firstAttribute="centerY" secondItem="h4w-Uj-PzT" secondAttribute="centerY" constant="-7" id="zdk-Fg-j8s"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="eai-uI-LuV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Rkb-C6-eLL" secondAttribute="bottom" constant="10" id="AE1-GV-Bt4"/>
                             <constraint firstAttribute="bottomMargin" secondItem="l1k-H9-XFT" secondAttribute="bottom" id="DKz-bs-7Ix"/>
+                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="bottom" priority="250" constant="10" id="E2l-u9-BAG"/>
                             <constraint firstItem="l1k-H9-XFT" firstAttribute="leading" secondItem="S7T-kg-ov0" secondAttribute="leadingMargin" constant="-16" id="H2L-oY-ehw"/>
-                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="top" secondItem="PKK-Jg-Ixs" secondAttribute="bottom" id="Jis-yW-w3i"/>
+                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="top" secondItem="PKK-Jg-Ixs" secondAttribute="bottom" constant="-20" id="Jis-yW-w3i"/>
+                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Rkb-C6-eLL" secondAttribute="bottom" constant="10" id="K0k-0r-Qia"/>
                             <constraint firstAttribute="trailingMargin" secondItem="l1k-H9-XFT" secondAttribute="trailing" constant="-16" id="TyI-ft-wvF"/>
                             <constraint firstItem="l1k-H9-XFT" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="bottom" id="Yr1-rz-RBs"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Rkb-C6-eLL" secondAttribute="trailing" constant="-16" id="e9e-nN-4zZ"/>
-                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="leading" secondItem="S7T-kg-ov0" secondAttribute="leadingMargin" constant="-16" id="x52-ZN-eT6"/>
+                            <constraint firstAttribute="trailing" secondItem="Rkb-C6-eLL" secondAttribute="trailing" id="e9e-nN-4zZ"/>
+                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="leading" secondItem="S7T-kg-ov0" secondAttribute="leading" id="x52-ZN-eT6"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="HIE-KG-TPd"/>
-                    <nil key="simulatedTopBarMetrics"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="1000"/>
                     <connections>
@@ -502,11 +498,15 @@ More features on the way!
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="foH-3H-Gp0" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="Fm1-zM-Zff"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kch-GC-H1D">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="gUM-X8-ymr">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="1XP-Fe-ht0" kind="relationship" relationship="rootViewController" id="UY1-je-HZR"/>
                     </connections>
